--- a/SegundoParcialVS/SegundoParcialVS/SegundoParcial.vcxproj
+++ b/SegundoParcialVS/SegundoParcialVS/SegundoParcial.vcxproj
@@ -150,20 +150,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CursoArchivo.cpp" />
     <ClCompile Include="Estudiante.cpp" />
     <ClCompile Include="EstudiantesArchivo.cpp" />
     <ClCompile Include="Fecha.cpp" />
+    <ClCompile Include="Funciones.cpp" />
     <ClCompile Include="Inscripcion.cpp" />
     <ClCompile Include="InscripcionesArchivo.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SegundoParcial.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CursoArchivo.h" />
     <ClInclude Include="Estudiante.h" />
     <ClInclude Include="EstudiantesArchivo.h" />
     <ClInclude Include="Fecha.h" />
+    <ClInclude Include="Funciones.h" />
     <ClInclude Include="Inscripcion.h" />
     <ClInclude Include="InscripcionesArchivo.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SegundoParcial.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
